Fix spacing for .icon-list and .news-posts

--- a/source/stylesheets/components/_icon-list.scss
+++ b/source/stylesheets/components/_icon-list.scss
@@ -1,15 +1,23 @@
 // Lists with icons or images
 .icon-list {
-  margin-top: (20em/16);
   list-style: none;
+  margin-top: (30em/16);
+
+  @include respond-to(768px) {
+    margin-top: (40em/16);
+  }
 
   li {
-    margin:0;
+    margin: 0;
 
     a {
       text-decoration: none;
       display: block;
-      margin: 0 0 (10em/20) 45px;
+      margin: 0 0 (15em/16) 45px;
+
+      @include respond-to(768px) {
+        margin-top: (20em/16);
+      }
 
       @include respond-to(768px) {
         margin-left: 0;
